updated all until form

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bamboo</title>
     <link rel="stylesheet" href="styles/global.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
   </head>
   <body>
     <div class="page1">
@@ -170,41 +171,302 @@
         </p>
         <div class="skills">
           <div class="skill">
-          <div class="skill-title">HTML</div>
-          <div class="skill-bar">
-            <div class="skill-fill" style="width: 75%"></div>
-          </div>
-          </div>
-          <div class="skill">
-          <div class="skill-title">CSS</div>
-          <div class="skill-bar">
-            <div class="skill-fill" style="width: 75%"></div>
-          </div>
+            <div class="skill-title">HTML</div>
+            <div class="skill-bar">
+              <div class="skill-fill" style="width: 75%"></div>
+            </div>
           </div>
           <div class="skill">
-          <div class="skill-title">JAVASCRIPT</div>
-          <div class="skill-bar">
-            <div class="skill-fill" style="width: 75%"></div>
-          </div>
+            <div class="skill-title">CSS</div>
+            <div class="skill-bar">
+              <div class="skill-fill" style="width: 75%"></div>
+            </div>
           </div>
           <div class="skill">
-          <div class="skill-title">PHOTOSHOP</div>
-          <div class="skill-bar">
-            <div class="skill-fill" style="width: 75%"></div>
+            <div class="skill-title">JAVASCRIPT</div>
+            <div class="skill-bar">
+              <div class="skill-fill" style="width: 75%"></div>
+            </div>
           </div>
+          <div class="skill">
+            <div class="skill-title">PHOTOSHOP</div>
+            <div class="skill-bar">
+              <div class="skill-fill" style="width: 75%"></div>
+            </div>
           </div>
         </div>
       </div>
     </article>
 
     <!-- call to action section -->
-     <section id="callToAction">
+    <section id="callToAction">
       <div class="texts">
-      <h1>Call To Action</h1>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum nam illo aspernatur et odio id adipisci! Libero consequuntur eius perspiciatis omnis corporis ex dolor rerum.</p>
+        <h1>Call To Action</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum
+          nam illo aspernatur et odio id adipisci! Libero consequuntur eius
+          perspiciatis omnis corporis ex dolor rerum.
+        </p>
       </div>
       <a href="" class="btn">Call To Action</a>
-     </section>
+    </section>
+
+    <!-- team section -->
+    <section id="team">
+      <div class="text-center">
+        <h1>TEAM</h1>
+        <h3>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque,
+          aspernatur!
+        </h3>
+      </div>
+      <div class="members">
+        <div class="member">
+          <div class="member-photo">
+            <img src="assets/team1.jpg" alt="member photo" />
+          </div>
+          <div class="member-details">
+            <h3>Walter White</h3>
+            <h4>Chief Executive Officer</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero
+              nobis, tenetur rem omnis necessitatibus quisquam.
+            </p>
+            <div class="icons">
+              <div class="icon"><i class="fa-brands fa-x-twitter"></i></div>
+              <div class="icon"><i class="fa-brands fa-facebook"></i></div>
+              <div class="icon"><i class="fa-brands fa-instagram"></i></div>
+              <div class="icon"><i class="fa-brands fa-linkedin"></i></div>
+            </div>
+          </div>
+        </div>
+        <div class="member">
+          <div class="member-photo">
+            <img src="assets/team2.jpg" alt="member photo" />
+          </div>
+          <div class="member-details">
+            <h3>Sarath Jhonson</h3>
+            <h4>Product Manager</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero
+              nobis, tenetur rem omnis necessitatibus quisquam.
+            </p>
+            <div class="icons">
+              <div class="icon"><i class="fa-brands fa-x-twitter"></i></div>
+              <div class="icon"><i class="fa-brands fa-facebook"></i></div>
+              <div class="icon"><i class="fa-brands fa-instagram"></i></div>
+              <div class="icon"><i class="fa-brands fa-linkedin"></i></div>
+            </div>
+          </div>
+        </div>
+        <div class="member">
+          <div class="member-photo">
+            <img src="assets/team3.jpg" alt="member photo" />
+          </div>
+          <div class="member-details">
+            <h3>William Anderson</h3>
+            <h4>CTO</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero
+              nobis, tenetur rem omnis necessitatibus quisquam.
+            </p>
+            <div class="icons">
+              <div class="icon"><i class="fa-brands fa-x-twitter"></i></div>
+              <div class="icon"><i class="fa-brands fa-facebook"></i></div>
+              <div class="icon"><i class="fa-brands fa-instagram"></i></div>
+              <div class="icon"><i class="fa-brands fa-linkedin"></i></div>
+            </div>
+          </div>
+        </div>
+        <div class="member">
+          <div class="member-photo">
+            <img src="assets/team4.jpg" alt="member photo" />
+          </div>
+          <div class="member-details">
+            <h3>Amanda Jepson</h3>
+            <h4>Accountant</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero
+              nobis, tenetur rem omnis necessitatibus quisquam.
+            </p>
+            <div class="icons">
+              <div class="icon"><i class="fa-brands fa-x-twitter"></i></div>
+              <div class="icon"><i class="fa-brands fa-facebook"></i></div>
+              <div class="icon"><i class="fa-brands fa-instagram"></i></div>
+              <div class="icon"><i class="fa-brands fa-linkedin"></i></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- pricing section -->
+    <section id="pricing">
+      <div class="text-center">
+        <h1>PRICING</h1>
+        <h3>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem,
+          libero!
+        </h3>
+      </div>
+      <div class="plans">
+        <div class="plan">
+          <div class="plan-texts">
+            <h2>Free Plan</h2>
+            <h3>$</h3>
+            <h1>0</h1>
+            <span>/month</span>
+            <p>
+              <i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet
+              consectetur
+            </p>
+            <p>
+              <i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet
+              consectetur
+            </p>
+            <p>
+              <i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet
+              consectetur
+            </p>
+            <p>
+              <i class="fa-solid fa-xmark"></i>Lorem ipsum dolor sit amet
+              consectetur
+            </p>
+            <p>
+              <i class="fa-solid fa-xmark"></i>Lorem ipsum dolor sit amet
+              consectetur
+            </p>
+          </div>
+          <div class="plan-btn">
+            <button>Buy Now</button>
+          </div>
+        </div>
+        <div class="plan">
+          <div class="plan-texts">
+            <h2>Free Plan</h2>
+            <h3>$</h3>
+            <h1>0</h1>
+            <span>/month</span>
+            <p>
+              <i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet
+              consectetur
+            </p>
+            <p>
+              <i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet
+              consectetur
+            </p>
+            <p>
+              <i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet
+              consectetur
+            </p>
+            <p>
+              <i class="fa-solid fa-xmark"></i>Lorem ipsum dolor sit amet
+              consectetur
+            </p>
+            <p>
+              <i class="fa-solid fa-xmark"></i>Lorem ipsum dolor sit amet
+              consectetur
+            </p>
+          </div>
+          <div class="plan-btn">
+            <button>Buy Now</button>
+          </div>
+        </div>
+        <div class="plan">
+          <div class="plan-texts">
+            <h2>Free Plan</h2>
+            <h3>$</h3>
+            <h1>0</h1>
+            <span>/month</span>
+            <p>
+              <i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet
+              consectetur
+            </p>
+            <p>
+              <i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet
+              consectetur
+            </p>
+            <p>
+              <i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet
+              consectetur
+            </p>
+            <p>
+              <i class="fa-solid fa-xmark"></i>Lorem ipsum dolor sit amet
+              consectetur
+            </p>
+            <p>
+              <i class="fa-solid fa-xmark"></i>Lorem ipsum dolor sit amet
+              consectetur
+            </p>
+          </div>
+          <div class="plan-btn">
+            <button>Buy Now</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- contact section -->
+    <section id="contact">
+      <div class="text-center">
+        <h1>CONTACT</h1>
+        <h3>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam,
+          aliquid!
+        </h3>
+      </div>
+      <main>
+        <div class="details">
+          <div class="item">
+            <i class="fa-solid fa-location-dot"></i>
+            <h3>Address</h3>
+            <p>A108 Adam Street, New York, NY 535022</p>
+          </div>
+          <div class="item">
+            <i class="fa-solid fa-phone"></i>
+            <h3>Call Us</h3>
+            <p>+1 5858 654964</p>
+          </div>
+          <div class="item">
+            <i class="fa-regular fa-envelope"></i>
+            <h3>Email Us</h3>
+            <p>Info@example.com</p>
+          </div>
+          <div class="map">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=..."
+              alt=""
+              width="400px"
+              height="260px"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+            >
+            </iframe>
+          </div>
+        </div>
+        <form class="contact-form">
+          <div class="row">
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input type="text" id="name" name="name" required />
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="email" id="email" name="email" required />
+            </div>
+          </div>
+
+          <label for="subject">Subject</label>
+          <input type="text" id="subject" name="subject" required />
+
+          <label for="message">Message</label>
+          <textarea id="message" name="message" rows="5" required></textarea>
+
+          <button type="submit">Send Message</button>
+        </form>
+      </main>
+    </section>
 
     <!-- services section -->
     <!-- <section id="services">
