--- a/index.html
+++ b/index.html
@@ -5,47 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bamboo</title>
     <link rel="stylesheet" href="styles/global.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/navbar.css" />
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous"> -->
   </head>
   <body>
-    <div class="page1">
-      <nav class="navbar">
-        <a href="" id="logoname">ARSHA</a>
-        <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Services</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Team</a></li>
-          <li><a href="">Pricing</a></li>
-          <li><a href="">Dropdown</a></li>
-          <li><a href="">Contact</a></li>
-          <li><a href="" class="buttons">Get Started</a></li>
-        </ul>
-      </nav>
-      <header>
-        <div class="header-content">
-          <div class="header-texts">
-            <h1>Better Solutions For</h1>
-            <h1>Your Business</h1>
-            <p>We are team of talented designers making</p>
-            <p>websites with Bootstrap</p>
-          </div>
-          <div class="header-btns">
-            <a href="" class="buttons">Get Started</a>
-            <a href="">
-              <i class="fa-solid fa-circle-play"></i>
-              Watch Video
-              <i class="fa-solid fa-download"></i>
-            </a>
-          </div>
-        </div>
+    <!-- navbar section -->
+    <nav>
+      <a href="#home" id="logoname">ARSHA</a>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#team">Team</a></li>
+        <li><a href="#pricing">Pricing</a></li>
+        <li><a href="#dropdown">Dropdown</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#get-started" class="buttons">Get Started</a></li>
+      </ul>
+    </nav>
 
-        <div class="header-img">
-          <img src="assets/image1.jpg" alt="" />
+    <!-- header section -->
+    <header>
+      <div class="header-content">
+        <div class="header-texts">
+          <h1>Better Solutions For</h1>
+          <h1>Your Business</h1>
+          <p>We are team of talented designers making</p>
+          <p>websites with Bootstrap</p>
         </div>
-      </header>
-    </div>
+        <div class="header-btns">
+          <a href="" class="buttons">Get Started</a>
+          <a href="">
+            <i class="fa-solid fa-circle-play"></i>
+            Watch Video
+            <i class="fa-solid fa-download"></i>
+          </a>
+        </div>
+      </div>
+
+      <div class="header-img">
+        <img src="assets/image1.jpg" alt="" />
+      </div>
+    </header>
 
     <!-- brands section -->
     <section id="brands">
