--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Bamboo</title>
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/navbar.css" />
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="styles/header.css" />
+    <link rel="stylesheet" href="styles/brands.css" />
+    <link rel="stylesheet" href="styles/about.css" />
   </head>
   <body>
     <!-- navbar section -->
@@ -15,8 +17,6 @@
       <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#team">Team</a></li>
         <li><a href="#pricing">Pricing</a></li>
         <li><a href="#dropdown">Dropdown</a></li>
