updated responsive of calltoaction,skills,team and third

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/brands.css" />
     <link rel="stylesheet" href="styles/about.css" />
+    <link rel="stylesheet" href="styles/third.css" />
+    <link rel="stylesheet" href="styles/skills.css" />
+    <link rel="stylesheet" href="styles/callToAction.css" />
+    <link rel="stylesheet" href="styles/team.css" />
+    <link rel="stylesheet" href="styles/contact.css" />
   </head>
   <body>
     <!-- navbar section -->
