updated navbar hover

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
       </div>
     </section>
 
-    <!-- third section -->
-    <article class="third">
+    <!-- services section -->
+    <article class="services" id="services">
       <div class="contents">
         <div class="heading">
           Lorem, ipsum dolor sit amet
