--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/brands.css" />
     <link rel="stylesheet" href="styles/about.css" />
-    <link rel="stylesheet" href="styles/third.css" />
+    <link rel="stylesheet" href="styles/services.css" />
     <link rel="stylesheet" href="styles/skills.css" />
     <link rel="stylesheet" href="styles/callToAction.css" />
     <link rel="stylesheet" href="styles/team.css" />
