--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     </article>
 
     <!-- fourth section  -->
-    <article class="third">
+    <article class="services">
       <div class="img">
         <div><img src="assets/image3.jpg" alt="" /></div>
       </div>
