updated map and hover

--- a/index.html
+++ b/index.html
@@ -439,7 +439,8 @@
             <div class="icon"><i class="fa-solid fa-location-dot"></i></div>
             <aside>
             <h3>Address</h3>
-            <p>A108 Adam Street, New York, NY 535022</p>
+            <p>A108 Adam Street</p>
+            <p>New York, NY 535022</p>
             </aside>
           </div>
           <div class="item">
