updated pricing card

--- a/index.html
+++ b/index.html
@@ -331,9 +331,12 @@
         <div class="plan">
           <div class="plan-texts">
             <h2>Free Plan</h2>
+            <span>
             <h3>$</h3>
             <h1>0</h1>
-            <span>/month</span>
+            <p> / month</p>
+            </span>
+            <aside>
             <p>
               <i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet
               consectetur
@@ -347,13 +350,14 @@
               consectetur
             </p>
             <p>
-              <i class="fa-solid fa-xmark"></i>Lorem ipsum dolor sit amet
+              <i class="fa-solid fa-xmark red"></i>Lorem ipsum dolor sit amet
               consectetur
             </p>
             <p>
-              <i class="fa-solid fa-xmark"></i>Lorem ipsum dolor sit amet
+              <i class="fa-solid fa-xmark red"></i>Lorem ipsum dolor sit amet
               consectetur
             </p>
+            </aside>
           </div>
           <div class="plan-btn">
             <button>Buy Now</button>
@@ -362,9 +366,12 @@
         <div class="plan">
           <div class="plan-texts">
             <h2>Free Plan</h2>
+            <span>
             <h3>$</h3>
             <h1>0</h1>
-            <span>/month</span>
+            <p> / month</p>
+            </span>
+            <aside>
             <p>
               <i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet
               consectetur
@@ -378,13 +385,14 @@
               consectetur
             </p>
             <p>
-              <i class="fa-solid fa-xmark"></i>Lorem ipsum dolor sit amet
+              <i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet
               consectetur
             </p>
             <p>
-              <i class="fa-solid fa-xmark"></i>Lorem ipsum dolor sit amet
+              <i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet
               consectetur
             </p>
+            </aside>
           </div>
           <div class="plan-btn">
             <button>Buy Now</button>
@@ -393,9 +401,12 @@
         <div class="plan">
           <div class="plan-texts">
             <h2>Free Plan</h2>
+            <span>
             <h3>$</h3>
             <h1>0</h1>
-            <span>/month</span>
+            <p> / month</p>
+            </span>
+            <aside>
             <p>
               <i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet
               consectetur
@@ -409,13 +420,14 @@
               consectetur
             </p>
             <p>
-              <i class="fa-solid fa-xmark"></i>Lorem ipsum dolor sit amet
+              <i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet
               consectetur
             </p>
             <p>
-              <i class="fa-solid fa-xmark"></i>Lorem ipsum dolor sit amet
+              <i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet
               consectetur
             </p>
+          </aside>
           </div>
           <div class="plan-btn">
             <button>Buy Now</button>
